--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -117,7 +117,29 @@ border: none;
     color: #F00;
 }
 .main-d3{
+    margin: 20px 300px 20px 300px;
+    text-align: center;
+    list-style: none;
+    flex-shrink: 0;
+    color: #070211;
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 56px;
+    text-transform: capitalize;
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    border-radius: 8px;
     width: 1320px;
-height: 482px;
-fill: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    height: 482px;
+}
+.main-btn-2{
+    display: inline-flex;
+  color: #fff;
+    padding: 16px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background: #F00;
+    border-radius: 6px;
+    border: none;
 }
